Fix structure and style of checkout success template, to work better on mobile devices

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -187,4 +187,12 @@ select option[value=""] {
     .border-green {
         padding-right: 0;
     }
+
+    .cos {
+        font-size: 0.8rem;
+    }
+
+    .sub-header {
+        font-size: 1.5rem;
+    }
 }
